feat: 롯데시네마 서비스 및 CLI 지원 추가
